methods.picture.PictureMono1.scala.code
override def run() {
  for (compt <- 1 to 4) {faire(V)}
}